refactor(*): remove css @import rule and transfer to js import

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     <main>
         <div class="container">
-            
+            <sgds-icon name="6-square"></sgds-icon>
             <sgds-close-button></sgds-close-button>
             <sgds-textarea required label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
