--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </dev-console-widget>
 </sgds-mainnav>
 <div class="grid-preview">
-    <sgds-sidenav class="mt-3" id="test-id" sticky>
+    <sgds-sidenav class="mt-3" id="test-id">
         <sgds-sidenav-item active>
             <span slot="title">
                 <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -143,7 +143,7 @@
             <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
             <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
         </sgds-sidenav-item>
-        <sgds-sidenav-item title="Test title 2">
+        <sgds-sidenav-item title="Test title 2" disabled>
             <span slot="title">
                 <sl-icon name="stack"></sl-icon> Title
             </span>
