feat(combobox): add form validation props and pass to input

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <br />
         </div>
         <div class="container">
-            <sgds-combo-box menuList='["John Smith", "Jack Adams"]' label="label" hintText="hint">
+            <sgds-combo-box menuList='["John Smith", "Jack Adams"]' label="label" hintText="hint" hasFeedback="true" invalidFeedback="test">
                 <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-search" viewBox="0 0 16 16">
                     <path
