--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                 margin-left: auto;
             }
         }
-
-
+        
         body {
             margin: 0;
             padding: 0;
@@ -51,6 +50,10 @@
                 "footer footer footer ";
             grid-template-columns: 240px repeat(2, 1fr);
             width: 100%;
+        }
+
+        sgds-accordion{ 
+            --sgds-accordion-item-padding-y: 2rem;
         }
 
         sgds-masthead {
