--- a/index.html
+++ b/index.html
@@ -426,52 +426,50 @@
                 <h2>Badge</h2>
                 <div class="row">
                     <div>
-                        <sgds-badge variant="primary" outlined>
+                        <sgds-badge status = "info">
+                            Testing
+                            
+                        </sgds-badge>
+                        <sgds-badge status="info" variant = "outlined">
+                            Testing
+                            <i slot="icon" class="bi bi-apple"></i>
+                            
+                        </sgds-badge>
+                        <sgds-badge status = "success" dismissable >
+                            Testing
+                            <i slot="icon" class="bi bi-apple"></i>
+                        </sgds-badge>
+                        <sgds-badge variant="success" variant = "outlined">
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="secondary" outlined>
+                        <sgds-badge status="danger" >
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="warning" outlined>
+                        <sgds-badge status="danger" variant = "outlined">
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="success" outlined>
+                        <sgds-badge status="warning">
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="danger" outlined roundedPill>
+                        <sgds-badge status="warning" variant = "outlined">
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="info" outlined>
+                        <sgds-badge status="neutral">
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
-                        <sgds-badge variant="light" outlined>
-                            Testing
-                            <i slot="rightIcon" class="bi bi-apple"></i>
-                            <i slot="leftIcon" class="bi bi-123"></i>
-                        </sgds-badge>
-                        <sgds-badge variant="dark" outlined>
-                            Testing
-                            <i slot="rightIcon" class="bi bi-apple"></i>
-                            <i slot="leftIcon" class="bi bi-123"></i>
-                        </sgds-badge>
-                        <sgds-badge variant="primary">
-                            Testing
-                            <i slot="rightIcon" class="bi bi-apple"></i>
-                            <i slot="leftIcon" class="bi bi-123"></i>
-                        </sgds-badge>
-                        <sgds-badge variant="secondary">
+                        <sgds-badge status="neutral" variant = "outlined">
                             Testing
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             <i slot="leftIcon" class="bi bi-123"></i>
