feat(badge): added light/dark modes for close button and changed dark to light, vice versa

--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
                             <i slot="rightIcon" class="bi bi-apple"></i>
                             
                         </sgds-badge>
-                        <sgds-badge variant="neutral" outlined>
-                            Testing
+                        <sgds-badge variant="neutral" outlined dismissible>
+                            Testing outlined 
                             
                             <i slot="leftIcon" class="bi bi-123"></i>
                         </sgds-badge>
